<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_map"
        android:icon="@drawable/ic_location"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/more"
        android:title="@string/change_language">
        <menu>
            <item
                android:id="@+id/language_english"
                android:title="@string/english"
                app:showAsAction="never"/>

            <item
                android:id="@+id/language_indonesian"
                android:title="@string/indonesia"
                app:showAsAction="never"/>

            <item
                android:id="@+id/language_japanese"
                android:title="@string/japan"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
