<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/story_image"
            android:transitionName="image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/story_image_placeholder"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/story_author"
                android:transitionName="Author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_author"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                />
            <TextView
                android:id="@+id/story_description"
                android:transitionName="Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Description"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                />

            <TextView
                android:id="@+id/time_created"
                android:transitionName="CreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:layout_gravity="end"
                />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>